compiler/tests/fail/arm-m4/intrinsic_mlsS.jazz
export
fn main(reg u32 x y z) -> reg u32 {
    x = #MLSS(x, y, z);
    return x;
}

